# EOV-Seg

./: .gitignore  pyproject.toml
eov_seg/modeling/backbone/: clip.py
