[project]
authors = [{name = "Uspfe", email = "benjamin.bogenberger@tum.de"}]
dependencies = ["opencv-python>=4.13.0.92,<5", "cython>=3.2.4,<4", "scipy>=1.17.1,<2", "shapely>=2.1.2,<3", "timm>=1.0.25,<2", "h5py>=3.16.0,<4", "submitit>=1.5.4,<2", "scikit-image>=0.26.0,<0.27", "opencv-python-headless>=4.13.0.92,<5", "open-clip-torch==2.24.0"]
name = "EOV-Seg"
requires-python = ">= 3.11"
version = "0.1.0"

# [build-system]
# build-backend = "hatchling.build"
# requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

# [tool.pixi.pypi-options]
# no-build-isolation = ["detectron2"]

[tool.pixi.pypi-dependencies]
# eov_seg = { path = ".", editable = true }
torch = { version = "==2.10.0", index = "https://download.pytorch.org/whl/cu130" }
torchvision = { version = "*", index = "https://download.pytorch.org/whl/cu130" }
# detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }
# detectron2 = { version = "*", index = "https://download.pytorch.org/whl/cu130" }
# panopticapi = {git = "https://github.com/cocodataset/panopticapi.git" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
# detectron2 = ">=0.6,<0.7"
setuptools = "*"
pip = ">=26.0.1,<27"
python = "==3.12"
cuda-nvcc = ">=13.2.51,<14"
cuda-libraries-dev = ">=13.2.0,<14"

[tool.pixi.system-requirements]
cuda = "13.0"

